[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seaborn_plotting_JBarens"
version = "0.0.5"
authors = [
  { name="JBarens", email="jasper@barens.org" },
]
description = "A small seaborn plotting package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/JBarens/SeabornPlotter"
Issues = "https://github.com/pypa/sampleproject/issues"

